--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-  	"start" : "node .",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.6",
-    "node-html-parser": "^5.1.0",
-    "nodejs-file-downloader": "^4.7.4",
+    "express-handlebars": "^6.0.2",
     "puppeteer": "^12.0.1"
   }
 }
