--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#custom Files
+*.tar.bz2
+src/anime
+
 # Logs
 logs
 *.log
@@ -9,7 +13,7 @@ src/downloads
 src/files
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-*.tar.bz2
+
 # Runtime data
 pids
 *.pid
