--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon src/dev",
-    "rc" : "node src/test/recaptcha"
+    "rc": "node src/test/recaptcha"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express-handlebars": "^6.0.2",
     "puppeteer": "^12.0.1",
     "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-recaptcha": "^3.5.0"
+    "puppeteer-extra-plugin-recaptcha": "^3.5.0",
+    "puppeteer-extra-plugin-stealth": "^2.9.0"
   }
 }
